# ChangeLog for media-plugins/digikamimageplugins
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/digikamimageplugins/ChangeLog,v 1.27 2006/09/20 21:12:41 deathwing00 Exp $

*digikamimageplugins-0.9.0_beta2 (20 Sep 2006)

  20 Sep 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  +digikamimageplugins-0.9.0_beta2.ebuild:
  Version bump.

*digikamimageplugins-0.9.0_beta1 (13 Aug 2006)

  13 Aug 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  digikamimageplugins-0.8.2.ebuild, +digikamimageplugins-0.9.0_beta1.ebuild:
  Version bump. See bug #143603 for details. Fixed documentation for versions
  0.8.2 and above from 0.8.0 to 0.8.2

*digikamimageplugins-0.8.2 (18 Jul 2006)

  18 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +digikamimageplugins-0.8.2.ebuild:
  Version bump.

  17 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  digikamimageplugins-0.7.4-r1.ebuild:
  ppc stable, bug #113723

*digikamimageplugins-0.8.1 (21 Feb 2006)
*digikamimageplugins-0.7.4-r2 (21 Feb 2006)

  21 Feb 2006; Carsten Lohrke <carlo@gentoo.org>
  +digikamimageplugins-0.7.4-r2.ebuild,
  -digikamimageplugins-0.8.0-r1.ebuild, +digikamimageplugins-0.8.1.ebuild:
  Fix broken doc install, make LINGUAS aware, version bump.

  15 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
  -digikamimageplugins-0.7.1.ebuild:
  Drop old version.

  01 Feb 2006; Marcus D. Hanwell <cryos@gentoo.org>
  digikamimageplugins-0.8.0-r1.ebuild:
  Loosen dependency as this package was not updated for 0.8.1.

  03 Jan 2006; Petteri Räty <betelgeuse@gentoo.org>
  digikamimageplugins-0.7.4-r1.ebuild:
  Marked stable on x86 for bug #113723.

  04 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org>
  -digikamimageplugins-0.7.4.ebuild, digikamimageplugins-0.7.4-r1.ebuild,
  -digikamimageplugins-0.8.0.ebuild:
  Stable on amd64, bug 113723. Pruned old versions.

*digikamimageplugins-0.8.0-r1 (03 Dec 2005)
*digikamimageplugins-0.7.4-r1 (03 Dec 2005)
