@@ -1,0 +1,6 @@
+MD5 e980db8f42008fbf932caab2b6295852 digikamimageplugins-0.9.0-beta3.tar.bz2 3612437
+RMD160 d564bae1fab616714eb785aa16e13fdfe775e093 digikamimageplugins-0.9.0-beta3.tar.bz2 3612437
+SHA256 3225f88c4e36eb5f664faf2c4d63a326cbd4b408def7ce18f1eeb3636ef50f91 digikamimageplugins-0.9.0-beta3.tar.bz2 3612437
+MD5 396d82e7afb31c3fc37599561f167a10 digikamimageplugins-doc-0.8.2.tar.bz2 41165068
+RMD160 fcab643141f17a4e90317305e385bad9c8a5553b digikamimageplugins-doc-0.8.2.tar.bz2 41165068
+SHA256 c90759766ae881e3f7867468bf61215d331f5ddc94d0757076fc8f1f08131f38 digikamimageplugins-doc-0.8.2.tar.bz2 41165068
