@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/digikamimageplugins
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/digikamimageplugins/ChangeLog,v 1.27 2006/09/20 21:12:41 deathwing00 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/digikamimageplugins/ChangeLog,v 1.28 2006/10/31 18:34:19 deathwing00 Exp $
+
+*digikamimageplugins-0.9.0_beta3 (31 Oct 2006)
+
+  31 Oct 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
+  +digikamimageplugins-0.9.0_beta3.ebuild:
+  Version bump.
 
 *digikamimageplugins-0.9.0_beta2 (20 Sep 2006)
 
